--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -43,17 +43,17 @@ jobs:
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
           args: copyto sanguoyanyi-vst.epub gdrive:/古籍共享电子书计划/三國演義-豎排.epub
-      - name: Sync to Freemdict
+      - name: Sync to Onedrive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto sanguoyanyi.epub freemdict:/古籍共享电子书计划/三國演義.epub
-      - name: Sync vst to Freemdict
+          args: copyto sanguoyanyi.epub onedrive:/古籍共享电子书计划/三國演義.epub
+      - name: Sync vst to Onedrive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto sanguoyanyi-vst.epub freemdict:/古籍共享电子书计划/三國演義-豎排.epub
+          args: copyto sanguoyanyi-vst.epub onedrive:/古籍共享电子书计划/三國演義-豎排.epub
